testsuite/tests/grammar/two_roots/test.out
test.py:10: error: Only one class can derive from ASTNode (previous was: FooNode)
Done
